Version 5.x (#210)
* Regex match fix to account for the fact that SPARQL.js 2.x does *not* wrap the literal's datatype URI into `<>`

* Debug RDF/XML data during `PATCH` request

* Added `s` flag to `matches()` and `regex` in order to allow newlines in literals
Simplified `xsl:analyze-string` logic (avoid calling it twice)

* Fixing container mode for queries

* Pass `$block` to `ldh:RenderRow` instead of `$block-uri`

* Debug `$query-uri`

* Fixed var name

* Fix `$query-uri` value

* Fixed `$block-uri` usage

* Updated chart rendering in `ldh:RenderRow` mode

* Build `$chart-html` in the `.btn-save-chart` handler

* Fixed `xsl:for-each` syntax

* Fixed `$chat-html`

* Apply `bs2:RowForm` on `$constructed-doc`

* Added missing `$resource` definition

* Define `$method`

* Defined `$doc-uri`

* Added `@rdf:nodeID` to chart resource in the constructor

* Try to insert `$row-form` after `$block` by calling `Element.after()`

* Added `$form-actions` param to `bs2:Chart` mode

* Copy following siblings of the `$block` and re-insert them after the `$row-form`

* Trace `$row-form`

* Added default `xmlns="http://www.w3.org/1999/xhtml"` namespace to (X)HTML stylesheets
Web-Client bumped to 4.0.17-SNAPSHOT
SNAPSHOT bump

* Try `cdata-section-elements="script"`

* Added `CDATA` escaping hack for `<script>` elements with inline JS

* Wrap `<![CDATA[` into `<xsl:text disable-output-escaping="yes">`

* More `<xsl:text disable-output-escaping="yes">`

* More `<xsl:text disable-output-escaping="yes">`

* More `disable-output-escaping="yes"`

* Refactored `.add-constructor` handler to call `Element.before()`

* Don't call `ldh:RenderRowForm`

* Apply client-side templates on the appended row form (now following sibling of the `$block`)

* Apply `ldh:RenderRowForm` on the inserted row form

* Store `$block-html` when `.btn-edit` is clicked (HTML before editing mode was enabled)

* Fixed var name

* Commented out unused code

* Create new `window.LinkedDataHub.contents[$about]` obje