@@ -17,20 +17,21 @@
 package com.atomgraph.linkeddatahub.server.filter.request;
 
 import com.atomgraph.client.vocabulary.AC;
-import com.atomgraph.core.vocabulary.SD;
 import com.atomgraph.linkeddatahub.apps.model.EndUserApplication;
 import com.atomgraph.linkeddatahub.client.SesameProtocolClient;
 import com.atomgraph.linkeddatahub.server.exception.auth.AuthorizationException;
 import com.atomgraph.linkeddatahub.model.auth.Agent;
 import com.atomgraph.linkeddatahub.model.Service;
 import com.atomgraph.linkeddatahub.server.security.AuthorizationContext;
+import com.atomgraph.linkeddatahub.server.util.AuthorizationParams;
+import com.atomgraph.linkeddatahub.server.util.SetResultSetValues;
 import com.atomgraph.linkeddatahub.vocabulary.ACL;
+import com.atomgraph.linkeddatahub.vocabulary.DH;
+import com.atomgraph.linkeddatahub.vocabulary.Default;
 import com.atomgraph.linkeddatahub.vocabulary.LACL;
-import com.atomgraph.server.vocabulary.LDT;
 import com.atomgraph.spinrdf.vocabulary.SPIN;
 import java.io.IOException;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 import jakarta.annotation.PostConstruct;
@@ -42,15 +43,19 @@ import jakarta.ws.rs.container.ContainerRequestContext;
 import jakarta.ws.rs.container.ContainerRequestFilter;
 import jakarta.ws.rs.container.PreMatching;
 import jakarta.ws.rs.core.Response;
+import java.net.URI;
+import java.util.HashSet;
+import java.util.Set;
 import org.apache.jena.query.ParameterizedSparqlString;
+import org.apache.jena.query.Query;
 import org.apache.jena.query.QuerySolutionMap;
+import org.apache.jena.query.ResultSet;
+import org.apache.jena.query.ResultSetRewindable;
 import org.apache.jena.rdf.model.Model;
-import org.apache.jena.rdf.model.Property;
-import org.apache.jena.rdf.model.RDFNode;
-import org.apache.jena.rdf.model.ResIterator;
+import org.apache.jena.rdf.model.ModelFactory;
 import org.apache.jena.rdf.model.Resource;
 import org.apache.jena.rdf.model.ResourceFactory;
-import org.apache.jena.vocabulary.RDFS;
+import org.apache.jena.vocabulary.RDF;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -68,26 +73,20 @@ public class AuthorizationFilter implements ContainerRequestFilter
     /**
      * A mapping of HTTP methods to ACL access modes.
      */
-    public static final Map<String, Resource> ACCESS_MODES;
-    static
-    {
-        final Map<String, Resource> accessModes = new HashMap<>();
-        
-        accessModes.put(HttpMethod.GET, ACL.Read);
-        accessModes.put(HttpMethod.HEAD, ACL.Read);
-        accessModes.put(HttpMethod.POST, ACL.Append);
-        accessModes.put(HttpMethod.PUT, ACL.Write);
-        accessModes.put(HttpMethod.DELETE, ACL.Write);
-        accessModes.put(HttpMethod.PATCH, ACL.Write);
-        
-        ACCESS_MODES = Collections.unmodifiableMap(accessModes);
-    }
+    public static final Map<String, Resource> ACCESS_MODES = Map.of(
+        HttpMethod.GET, ACL.Read,
+        HttpMethod.HEAD, ACL.Read,
+        HttpMethod.POST, ACL.Append,
+        HttpMethod.PUT, ACL.Write,
+        HttpMethod.DELETE, ACL.Write,
+        HttpMethod.PATCH, ACL.Write
+    );
     
     @Inject com.atomgraph.linkeddatahub.Application system;
     @Inject jakarta.inject.Provider<com.atomgraph.linkeddatahub.apps.model.Application> app;
     @Inject jakarta.inject.Provider<Optional<com.atomgraph.linkeddatahub.apps.model.Dataset>> dataset;
     
-    private ParameterizedSparqlString authQuery, ownerAuthQuery;
+    private ParameterizedSparqlString documentTypeQuery, documentOwnerQuery, aclQuery, ownerAclQuery;
 
     /**
      * Post-construct initialization.
@@ -95,8 +94,10 @@ public class AuthorizationFilter implements ContainerRequestFilter
     @PostConstruct
     public void init()
     {
-        authQuery = new ParameterizedSparqlString(getSystem().getAuthQuery().toString());
-        ownerAuthQuery = new ParameterizedSparqlString(getSystem().getOwnerAuthQuery().toString());
+        documentTypeQuery = new ParameterizedSparqlString(system.getDocumentTypeQuery().toString());
+        documentOwnerQuery = new ParameterizedSparqlString(system.getDocumentOwnerQuery().toString());
+        aclQuery = new ParameterizedSparqlString(getSystem().getACLQuery().toString());
+        ownerAclQuery = new ParameterizedSparqlString(getSystem().getOwnerACLQuery().toString());
     }
     
     @Override
@@ -146,36 +147,6 @@ public class AuthorizationFilter implements ContainerRequestFilter
     }
     
     /**
-     * Builds solution map for the authorization query.
-     * 
-     * @param absolutePath request URL without query string
-     * @param agent agent resource or null
-     * @param accessMode ACL access mode
-     * @return solution map
-     */
-    public QuerySolutionMap getAuthorizationParams(Resource absolutePath, Resource agent, Resource accessMode)
-    {
-        QuerySolutionMap qsm = new QuerySolutionMap();
-        qsm.add(SPIN.THIS_VAR_NAME, absolutePath);
-        qsm.add("Mode", accessMode);
-        qsm.add(LDT.Ontology.getLocalName(), getApplication().getOntology());
-        qsm.add(LDT.base.getLocalName(), getApplication().getBase());
-        
-        if (agent != null)
-        {
-            qsm.add("AuthenticatedAgentClass", ACL.AuthenticatedAgent); // enable AuthenticatedAgent UNION branch
-            qsm.add("agent", agent);
-        }
-        else
-        {
-            qsm.add("AuthenticatedAgentClass", RDFS.Resource); // disable AuthenticatedAgent UNION branch
-            qsm.add("agent", RDFS.Resource); // disables UNION branch with ?agent
-        }
-        
-        return qsm;
-    }
-    
-    /**
      * Returns authorization for the current request.
      * 
      * @param request current request
@@ -185,46 +156,112 @@ public class AuthorizationFilter implements ContainerRequestFilter
      */
     public Resource authorize(ContainerRequestContext request, Resource agent, Resource accessMode)
     {
-        return authorize(getAuthorizationParams(ResourceFactory.createResource(request.getUriInfo().getAbsolutePath().toString()), agent, accessMode));
+        Resource accessTo = ResourceFactory.createResource(request.getUriInfo().getAbsolutePath().toString());
+        
+        // special case where the agent is the owner of the requested document - automatically grant acl:Read/acl:Append/acl:Write access
+        if (agent != null && isOwner(accessTo, agent))
+        {
+            log.debug("Agent <{}> is the owner of <{}>, granting acl:Read/acl:Append/acl:Write access", agent, accessTo);
+            return createOwnerAuthorization(accessTo, agent);
+        }
+        
+        QuerySolutionMap thisQsm = new QuerySolutionMap();
+        thisQsm.add(SPIN.THIS_VAR_NAME, accessTo);
+
+        ResultSetRewindable docTypesResult = loadResultSet(getApplication().getService(), getDocumentTypeQuery(), thisQsm);
+        try
+        {
+            if (!docTypesResult.hasNext()) // if the document resource has no types, we assume the document does not exist
+            {
+                // special case for PUT requests to non-existing document: allow if the agent has acl:Write acess to the *parent* URI
+                if (request.getMethod().equals(HttpMethod.PUT) && accessMode.equals(ACL.Write))
+                {
+                    URI parentURI = URI.create(accessTo.getURI()).resolve("..");
+                    log.debug("Requested document <{}> not found, falling back to parent URI <{}>", accessTo, parentURI);
+                    accessTo = ResourceFactory.createResource(parentURI.toString());
+
+                    thisQsm = new QuerySolutionMap();
+                    thisQsm.add(SPIN.THIS_VAR_NAME, accessTo);
+
+                    docTypesResult.close();
+                    docTypesResult = loadResultSet(getApplication().getService(), getDocumentTypeQuery(), thisQsm);
+
+                    Set<Resource> parentTypes = new HashSet<>();
+                    docTypesResult.forEachRemaining(qs -> parentTypes.add(qs.getResource("Type")));
+
+                    // only root and containers allow child documents. This needs to be checked before checking ownership
+                    if (Collections.disjoint(parentTypes, Set.of(Default.Root, DH.Container))) return null;
+                    docTypesResult.reset(); // rewind result set to the beginning - it's used again later on
+
+                    // special case where the agent is the owner of the requested document - automatically grant acl:Read/acl:Append/acl:Write access
+                    if (agent != null && isOwner(accessTo, agent))
+                    {
+                        log.debug("Agent <{}> is the owner of <{}>, granting acl:Read/acl:Append/acl:Write access", agent, accessTo);
+                        return createOwnerAuthorization(accessTo, agent);
+                    }
+                }
+                else return null;
+            }
+
+            ParameterizedSparqlString pss = getApplication().canAs(EndUserApplication.class) ? getACLQuery() : getOwnerACLQuery();
+            Query query = new SetResultSetValues().apply(pss.asQuery(), docTypesResult);
+            pss = new ParameterizedSparqlString(query.toString()); // make sure VALUES are now part of the query string
+            assert pss.toString().contains("VALUES");
+
+            Model authModel = loadModel(getAdminService(), pss, new AuthorizationParams(getApplication().getBase(), accessTo, agent).get());
+            return getAuthorizationByMode(authModel, accessMode);
+        }
+        finally
+        {
+            docTypesResult.close();
+        }
     }
     
     /**
-     * Authorizes current request by applying solution map on the authorization query and executing it.
+     * Returns an authorization from the given model that has the given access mode..
      * 
-     * @param qsm solution map
+     * @param authModel model with authorizations
+     * @param accessMode ACL access mode
      * @return authorization resource or null
      */
-    public Resource authorize(QuerySolutionMap qsm)
+    public Resource getAuthorizationByMode(Model authModel, Resource accessMode)
     {
-        Model authModel = loadAuth(qsm);
-        
-        // type check will not work on LACL subclasses without InfModel
-        Resource authorization = getResourceByPropertyValue(authModel, ACL.mode, null);
-        if (authorization == null) authorization = getResourceByPropertyValue(authModel, ResourceFactory.createProperty(LACL.NS + "accessProperty"), null); // creator access
-            
-        return authorization;
-    }
-
-    /**
-     * Loads authorization model.
-     * 
-     * @param qsm solution map
-     * @return authorization model
-     */
-    protected Model loadAuth(QuerySolutionMap qsm)
-    {
-        if (qsm == null) throw new IllegalArgumentException("QuerySolutionMap cannot be null");
-
-        final ParameterizedSparqlString pss = getApplication().canAs(EndUserApplication.class) ? getAuthQuery() : getOwnerAuthQuery();
-        
-        if (getApplication().canAs(EndUserApplication.class))
-            pss.setIri(SD.endpoint.getLocalName(), getApplication().getService().getSPARQLEndpoint().toString()); // needed for federation with the end-user endpoint
-
-        return loadModel(getAdminService(), pss, qsm);
+        return authModel.listResourcesWithProperty(ACL.mode, accessMode).
+            toList().stream().
+            findFirst().
+            orElse(null);      
     }
     
     /**
-     * Loads authorization graph from the admin service.
+     * Checks if the given agent is the <code>acl:owner</code> of the document.
+     * 
+     * @param accessTo the document URI
+     * @param agent the agent whose ownership is checked.
+     * @return true if the agent is the owner, false otherwise.
+     */
+    protected boolean isOwner(Resource accessTo, Resource agent)
+    {
+        if (agent == null) return false;
+
+        QuerySolutionMap qsm = new QuerySolutionMap();
+        qsm.add(SPIN.THIS_VAR_NAME, accessTo);
+
+        ParameterizedSparqlString pss = getDocumentOwnerQuery();
+        pss.setParams(qsm);
+
+        ResultSetRewindable ownerResult = loadResultSet(getApplication().getService(), getDocumentOwnerQuery(), qsm); // could use ASK query in principle
+        try
+        {
+            return ownerResult.hasNext() && agent.equals(ownerResult.next().getResource("owner"));
+        }
+        finally
+        {
+            ownerResult.close();
+        }
+    }
+
+    /**
+     * Loads RDF graph from a service.
      * 
      * @param service SPARQL service
      * @param pss auth query string
@@ -256,31 +293,57 @@ public class AuthorizationFilter implements ContainerRequestFilter
     }
     
     /**
-     * Returns resource which has a specified property with a specified value, from the specified model.
-     * If there are multiple matching resources, one is selected in undefined order.
+     * Loads SPARQL result set from a service.
      * 
-     * @param model model
-     * @param property property
-     * @param value value
-     * @return resource or null, if none matched
+     * @param service SPARQL service
+     * @param pss auth query string
+     * @param qsm query solution map (applied to the query string or sent as request params, depending on the protocol)
+     * @return authorization graph (can be empty)
+     * @see com.atomgraph.linkeddatahub.vocabulary.LDHC#authQuery
      */
-    protected Resource getResourceByPropertyValue(Model model, Property property, RDFNode value)
+    protected ResultSetRewindable loadResultSet(com.atomgraph.linkeddatahub.model.Service service, ParameterizedSparqlString pss, QuerySolutionMap qsm)
     {
-        if (model == null) throw new IllegalArgumentException("Model cannot be null");
-        if (property == null) throw new IllegalArgumentException("Property cannot be null");
+        if (service == null) throw new IllegalArgumentException("Service cannot be null");
+        if (pss == null) throw new IllegalArgumentException("ParameterizedSparqlString cannot be null");
+        if (qsm == null) throw new IllegalArgumentException("QuerySolutionMap cannot be null");
         
-        ResIterator it = model.listSubjectsWithProperty(property, value);
-        
-        try
+        // send query bindings separately from the query if the service supports the Sesame protocol
+        if (service.getSPARQLClient() instanceof SesameProtocolClient sesameProtocolClient)
+            try (Response cr = sesameProtocolClient.query(pss.asQuery(), ResultSet.class, qsm)) // register(new CacheControlFilter(CacheControl.valueOf("no-cache"))). // add Cache-Control: no-cache to request
+            {
+                return cr.readEntity(ResultSetRewindable.class);
+            }
+        else
         {
-            if (it.hasNext()) return it.next();
+            pss.setParams(qsm);
+            try (Response cr = service.getSPARQLClient(). // register(new CacheControlFilter(CacheControl.valueOf("no-cache"))). // add Cache-Control: no-cache to request
+                query(pss.asQuery(), ResultSet.class))
+            {
+                return cr.readEntity(ResultSetRewindable.class);
+            }
         }
-        finally
-        {
-            it.close();
-        }
+    }
+    
+    /**
+     * Creates a special <code>acl:Authorization</code> resource for an owner.
+     * @param accessTo requested URI
+     * @param agent authenticated agent
+     * @return authorization resource
+     */
+    public Resource createOwnerAuthorization(Resource accessTo, Resource agent)
+    {
+        if (accessTo == null) throw new IllegalArgumentException("Document resource cannot be null");
+        if (agent == null) throw new IllegalArgumentException("Agent resource cannot be null");
 
-        return null;
+        return ModelFactory.createDefaultModel().
+                createResource().
+                addProperty(RDF.type, ACL.Authorization).
+                addProperty(RDF.type, LACL.OwnerAuthorization).
+                addProperty(ACL.accessTo, accessTo).
+                addProperty(ACL.agent, agent).
+                addProperty(ACL.mode, ACL.Read).
+                addProperty(ACL.mode, ACL.Write).
+                addProperty(ACL.mode, ACL.Append);
     }
     
     /**
@@ -326,14 +389,34 @@ public class AuthorizationFilter implements ContainerRequestFilter
     }
 
     /**
+     * Returns a query that loads document type metadata.
+     * 
+     * @return SPARQL string
+     */
+    public ParameterizedSparqlString getDocumentTypeQuery()
+    {
+        return documentTypeQuery.copy();
+    }
+    
+    /**
+     * Returns a query that loads document owner metadata.
+     * 
+     * @return SPARQL string
+     */  
+    public ParameterizedSparqlString getDocumentOwnerQuery()
+    {
+        return documentOwnerQuery.copy();
+    }
+    
+    /**
      * Returns authorization query.
      * Used on end-user applications.
      * 
      * @return SPARQL string
      */
-    public ParameterizedSparqlString getAuthQuery()
+    public ParameterizedSparqlString getACLQuery()
     {
-        return authQuery.copy();
+        return aclQuery.copy();
     }
 
     /**
@@ -342,9 +425,9 @@ public class AuthorizationFilter implements ContainerRequestFilter
      * 
      * @return SPARQL string
      */
-    public ParameterizedSparqlString getOwnerAuthQuery()
+    public ParameterizedSparqlString getOwnerACLQuery()
     {
-        return ownerAuthQuery.copy();
+        return ownerAclQuery.copy();
     }
     
 }
